# envuscate

./: .cargo-rdme.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: rust.yml
envuscate/: Cargo.toml
envuscate/envuscate_macros/: Cargo.toml
envuscate/envuscate_macros/src/: lib.rs
envuscate/examples/: env.rs  simple.rs
envuscate/src/: lib.rs
