[package]
name = "envuscate"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
envuscate_macros = { version = "0.1.0", path = "envuscate_macros", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
aead = { version = "0.5.2", default-features = false, features = ["arrayvec"] }
arrayvec = { version = "0.7.6", default-features = false }
const-hex = { version = "1.14.0", optional = true, default-features = false }

[features]
default = ["env"]
env = ["envuscate_macros/env", "const-hex/std"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "env"
path = "examples/env.rs"
required-features = ["env"]
